# kim-reporter

./: .gitignore  CLAUDE.md  KIM-QA-Reporter.spec  README.md  SESSION_HANDOFF.md  pyproject.toml
.github/workflows/: build.yml
docs/: user-guide.md
kim_app/: __init__.py  __main__.py  server.py
kim_app/api/: routes.py  schema.py
kim_app/core/: loader.py  overlay.py  shifts.py  window.py
kim_app/pdf/: report.py
scripts/: build_docs_pdf.py
tests/: test_routes_flat_fraction.py
web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: DeviationPlot.tsx  FractionTabs.tsx  InterventionTable.tsx  PatientPicker.tsx  PhysicistNotes.tsx  ReportButton.tsx  SeedToggleBar.tsx
web/src/lib/: api.ts  plotlyPresets.ts  store.ts
web/src/types/: plotly-dist-min.d.ts
